--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ discord-py-interactions==4.4.0
 gspread==6.1.4
 oauth2client==4.1.3
 python-dotenv==1.0.1
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.12.2
