Refactor helper functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# .gitignore
+
+# Ignore cache files
+/utils/*.cache
+/utils/*.tmp
+
+# Ignore environment-specific files
 .env
+
+# Ignore Python bytecode files
+__pycache__/
+*.pyc
+*.pyo
+
+# Ignore virtual environment directories
+venv/
+env/
+
+# Ignore IDE-specific files
 /config/
 test.py
